Added search linear progress

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -1432,6 +1432,10 @@ body {
   color: #f16d7f;
 }
 
+.search-linear-progress {
+  margin: -24px 0 20px 0;
+}
+
 .txt-italics {
   font-style: italic;
 }
