filter, menu and filtering improved

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -1489,6 +1489,10 @@ body {
   padding: 0 16px;
 }
 
+.filter-disable {
+  display: none;
+}
+
 .catalog-filter {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
