--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -2242,6 +2242,7 @@ body {
   font-weight: 300;
   font-style: normal;
   text-decoration: none;
+  text-align: center;
   font-size: 14px;
   line-height: 17px;
   text-transform: uppercase;
@@ -2273,6 +2274,20 @@ body {
 
 .products-delivery {
   margin: 0 0 96px 17px;
+}
+
+.products-delivery-price {
+  font-family: lato, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  margin: 30px 0 0 20px;
+  color: #f16d7f;
+}
+
+.products-delivery-price-wrp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .products-delivery-adress {
@@ -2346,7 +2361,7 @@ body {
 
 .products-making-order-subtotal {
   font-family: lato, sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   font-style: normal;
   text-transform: uppercase;
   font-size: 13px;
@@ -2359,12 +2374,27 @@ body {
   margin: 0 0 0 21px;
 }
 
+.products-making-order-delivery {
+  font-family: lato, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  text-transform: uppercase;
+  font-size: 15px;
+  line-height: 15px;
+  color: #4a4a4a;
+  margin: 0 0 9px 0;
+}
+
+.products-making-order-delivery-price {
+  margin: 0 0 0 34px;
+}
+
 .products-making-order-grandtotal {
   font-family: lato, sans-serif;
   font-weight: 300;
   font-style: normal;
   text-transform: uppercase;
-  font-size: 16px;
+  font-size: 17px;
   line-height: 19px;
   color: #222222;
 }
@@ -2407,6 +2437,99 @@ body {
   padding: 15px 43px;
   border: none;
   cursor: pointer;
+}
+
+.checkout-window {
+  position: fixed;
+  max-width: 420px;
+  width: 100%;
+  max-height: 600px;
+  background-color: white;
+  padding: 20px 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin: auto;
+}
+
+.checkout-window-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.checkout-window-title {
+  font-family: lato, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 29px;
+  color: #f16d7f;
+  text-transform: uppercase;
+}
+
+.checkout-window-title-wrp {
+  margin: -20px -30px 25px -30px;
+  width: 100%;
+  padding: 20px 30px;
+  background-color: #f8f3f4;
+}
+
+.checkout-window-subtitle {
+  font-family: lato, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  margin: 20px 0 0 0;
+}
+
+.checkout-window-subtitle:nth-of-type(1) {
+  margin: 0;
+}
+
+.checkout-window-inputs {
+  font-family: lato, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 13px;
+  line-height: 16px;
+  color: #000000;
+  max-width: 360px;
+  margin: 15px 0 0 0;
+  border: 1px solid #a4a4a4;
+  padding: 12.5px 16px 13px 16px;
+  outline: none;
+}
+
+.checkout-window-btn {
+  font-family: lato, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin: 30px 0 0 0;
+  background-color: #f16d7f;
+  padding: 15px 43px;
+  border: none;
+  cursor: pointer;
+}
+
+.checkout-window-overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
 }
 
 .registration {
